Fix typo in man page and enbolden options in examples

--- a/wtwitch.1.adoc
+++ b/wtwitch.1.adoc
@@ -1,7 +1,7 @@
 = wtwitch(1)
 Hunter Peavey <krathalan at disroot dot org>
 :Date:          June 2019
-:Revision:      1.0.0
+:Revision:      1.0.1
 :man source:    wtwitch
 :man version:   {revision}
 :man manual:    User Commands
@@ -35,25 +35,25 @@ To reduce strain on the Twitch API, responses to the check option (-c,--check) a
 Watch the specified _streamer_, e.g. wtwitch _overwatchleague_
 
 *-t*, *--top-games*::
-View the top games on Twitch, e.g. wtwitch -t
+View the top games on Twitch, e.g. wtwitch *-t*
 
 *-g* _game_, **--get-streamers**=_game_::
-View the top streamers for a specified _game_, e.g. wtwitch _"world of warcraft"_. Game names with spaces must be quoted.
+View the top streamers for a specified _game_, e.g. wtwitch *-g* _"world of warcraft"_. Game names with spaces must be quoted.
 
 *-s* _streamer_, **--subscribe=**_streamer_::
-Subscribe to a specific _streamer_, e.g. wtwitch -s _overwatchleague_
+Subscribe to a specific _streamer_, e.g. wtwitch *-s* _overwatchleague_
 
 *-u* _streamer_, **--unsubscribe=**_streamer_::
-Unsubscribe from a specified _streamer_, e.g. wtwitch -u _overwatchleague_
+Unsubscribe from a specified _streamer_, e.g. wtwitch *-u* _overwatchleague_
 
 *-c*, *--check*::
-View your settings and the status of the streamers you are subscribed to, e.g. wtwitch -c
+View your settings and the status of the streamers you are subscribed to, e.g. wtwitch *-c*
 
 *-p* _player_, **--change-player=**_player_::
-Change the default _player_ in ~/.config/wtwitch/config.json that gets passed to Streamlink, e.g. wtwitch -p _vlc_
+Change the default _player_ in ~/.config/wtwitch/config.json that gets passed to Streamlink, e.g. wtwitch *-p* _vlc_
 
 *-q* _quality_, **--change-quality=**_quality_::
-Change the default _quality_ that gets passed to Streamlink, e.g. wtwitch -q _"720p,480p"_
+Change the default _quality_ that gets passed to Streamlink, e.g. wtwitch *-q* _"720p,480p"_
 
 == FILES
 The configuration file is at `~/.config/wtwitch/config.json`. 
