--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.1.0-1 (TBD)
+    Added "audio_only" as an acceptable quality
+    Improved functionality of (-h,--help) feature for systems without man page
+    Improved information output of debug (-d) feature
+
 1.0.9-1 (October 17, 2019)
     Updated man page
     Updated changelog styling (minor)
