--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-1.1.0-1 (TBD)
+1.1.0-1 (October 19, 2019)
     Fixed an issue where wtwitch would not function if the ~/.config/ dir didn't exist
     Added "audio_only" as an acceptable quality
     Improved functionality of (-h,--help) feature for systems without man page
