--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 1.1.1-1 (TBD)
-    Added debugging feature for "no option" option, i.e. opening a stream
+    Change upstream to https://sourcehut.org/
+    Debugging feature now works with "no option" option, i.e. opening a stream
+    Code cleanup
 
 1.1.0-1 (October 19, 2019)
     Fixed an issue where wtwitch would not function if the ~/.config/ dir didn't exist
