--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.1.5 (December 20, 2019)
+    Add error message for games with zero streamers
+    Fix some formatting and reorganize man page
+
 1.1.4-2 (December 7, 2019)
     Add mpv and vlc to optdepends
 
