--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.3.0 (TBD)
+    Option -t,--top-games changed to -t,--top and now lists top games *and* top streams
+    Added debugging-specific changes to more code
+    Reduce code duplication
+
 1.2.0 (February 8, 2020)
     Dramatically reduce the number of Twitch API calls with the -c,--check option
     The above change should at least alleviate https://todo.sr.ht/~krathalan/wtwitch/2
