--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 1.3.0 (TBD)
     Option -t,--top-games changed to -t,--top and now lists top games *and* top streams
+    Start caching game ids to reduce strain on Twitch api
     Added debugging-specific changes to more code
     Reduce code duplication
 
