--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
-1.3.0 (TBD)
+1.3.0 (February 12, 2020)
     Option -t,--top-games changed to -t,--top and now lists top games *and* top streams
-    Start caching game ids to reduce strain on Twitch api
-    Added debugging-specific changes to more code
-    Reduce code duplication
+    Started caching game IDs to again dramatically reduce strain on Twitch API
+    Added debugging information to more code
+    Reduced code duplication
 
 1.2.0 (February 8, 2020)
     Dramatically reduce the number of Twitch API calls with the -c,--check option
