--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,6 @@
 See the full changelog at 
 https://git.sr.ht/~krathalan/wtwitch/tree/master/FULLCHANGELOG
 
-1.2.0 (February 08, 2020)
-    Dramatically reduced the number of Twitch API calls with the -c,--check 
-        option
-    The above change should at least alleviate 
-        https://todo.sr.ht/~krathalan/wtwitch/2
-
 1.3.0 (February 12, 2020)
     Option -t,--top-games changed to -t,--top and now lists top games *and* 
         top streams
@@ -26,3 +20,6 @@ https://git.sr.ht/~krathalan/wtwitch/tree/master/FULLCHANGELOG
 
 1.4.2 (March 19, 2020)
     Fixed an "unbound variable" issue when a user had no subscriptions
+
+1.5
+    Add support for XDG Base Directory spec
