--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,5 +21,7 @@ https://git.sr.ht/~krathalan/wtwitch/tree/master/FULLCHANGELOG
 1.4.2 (March 19, 2020)
     Fixed an "unbound variable" issue when a user had no subscriptions
 
-1.5
+1.5 (TBD)
+    Add OAuth tokens for API requests as required by Twitch:
+        https://discuss.dev.twitch.tv/t/requiring-oauth-for-helix-twitch-api-endpoints/23916
     Add support for XDG Base Directory spec
