--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,6 @@
 See the full changelog at
 https://git.sr.ht/~krathalan/wtwitch/tree/master/FULLCHANGELOG
 
-1.4.2 (March 19, 2020)
-    Fixed an "unbound variable" issue when a user had no subscriptions
-
 1.5.0 (April 17, 2020)
     Add OAuth tokens for API requests as required by Twitch:
         https://discuss.dev.twitch.tv/t/requiring-oauth-for-helix-twitch-api-endpoints/23916
@@ -14,3 +11,6 @@ https://git.sr.ht/~krathalan/wtwitch/tree/master/FULLCHANGELOG
 
 1.6.0 (May 28, 2020)
     Add French translation patch from Léo Villeveygoux
+
+1.6.1 (June 8, 2020)
+    Fixed an issue where any language not officially supported would print "null" for each localized string
